--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ h2 {
 }
 
 h3 {
-  color: #11999E;
+  color: #9D9076;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -34,7 +34,7 @@ p {
 }
 
 hr {
-  border: 6px dotted #EAF6F6;
+  border: 6px dotted #9D9076;
   border-bottom: none;
   width: 4%;
   margin: 100px auto;
